[gd_scene load_steps=16 format=3 uid="uid://caxjcyt48xmp0"]

[ext_resource type="Texture2D" uid="uid://dn4belqy0k0hw" path="res://charaTBD.png" id="1_m28o7"]
[ext_resource type="Script" path="res://scene/character/Character.gd" id="1_pch7d"]
[ext_resource type="AudioStream" uid="uid://cp6q4ybnwntmk" path="res://sound/Step/step1.mp3" id="3_pbu7b"]
[ext_resource type="Texture2D" uid="uid://bbwv2bpjioe6o" path="res://assets/character/StaffMelee.png" id="3_wn5fh"]
[ext_resource type="AudioStream" uid="uid://bf2yyb0jnrk7v" path="res://sound/Step/step2.mp3" id="4_1rxhg"]
[ext_resource type="Texture2D" uid="uid://dq1jrsg5jqgop" path="res://assets/character/StaffRanged.png" id="4_6ht37"]
[ext_resource type="AudioStream" uid="uid://c1tveke6b8ols" path="res://sound/Step/step3.mp3" id="5_2q2xs"]
[ext_resource type="AudioStream" uid="uid://l4sjluk7v7wr" path="res://sound/Step/step5.mp3" id="6_7nbl7"]
[ext_resource type="AudioStream" uid="uid://bv74f6y4hx1x7" path="res://sound/Step/step6.mp3" id="7_rlqsk"]
[ext_resource type="AudioStream" uid="uid://cy1e7xeyl38ar" path="res://sound/Step/step8.mp3" id="8_52yx0"]
[ext_resource type="Texture2D" uid="uid://dinak8w45fe5i" path="res://assets/character/SwordMelee.png" id="9_ymd6k"]

[sub_resource type="CircleShape2D" id="CircleShape2D_e8tdo"]
radius = 14.0357

[sub_resource type="Animation" id="Animation_bt1sv"]
resource_name = "change_world_to_day"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.0901961, 0.662745, 0.584314, 1), Color(0.858824, 0.564706, 0.258824, 1)]
}

[sub_resource type="Animation" id="Animation_doa5p"]
resource_name = "change_world_to_night"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.858824, 0.564706, 0.258824, 1), Color(0.0901961, 0.662745, 0.584314, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d5vcv"]
_data = {
"change_world_to_day": SubResource("Animation_bt1sv"),
"change_world_to_night": SubResource("Animation_doa5p")
}

[node name="Character" type="CharacterBody2D"]
collision_mask = 11
script = ExtResource("1_pch7d")

[node name="StepSfx" type="Node" parent="."]

[node name="Step1" type="AudioStreamPlayer" parent="StepSfx"]
stream = ExtResource("3_pbu7b")

[node name="Step2" type="AudioStreamPlayer" parent="StepSfx"]
stream = ExtResource("4_1rxhg")

[node name="Step3" type="AudioStreamPlayer" parent="StepSfx"]
stream = ExtResource("5_2q2xs")

[node name="Step4" type="AudioStreamPlayer" parent="StepSfx"]
stream = ExtResource("6_7nbl7")

[node name="Step5" type="AudioStreamPlayer" parent="StepSfx"]
stream = ExtResource("3_pbu7b")

[node name="Step6" type="AudioStreamPlayer" parent="StepSfx"]
stream = ExtResource("7_rlqsk")

[node name="Step7" type="AudioStreamPlayer" parent="StepSfx"]
stream = ExtResource("8_52yx0")

[node name="Step8" type="AudioStreamPlayer" parent="StepSfx"]
stream = ExtResource("3_pbu7b")

[node name="Timer" type="Node" parent="."]

[node name="StepSfxCooldown" type="Timer" parent="Timer"]
one_shot = true

[node name="RangedCooldown" type="Timer" parent="Timer"]
wait_time = 0.2
one_shot = true

[node name="ReloadAutoCooldown" type="Timer" parent="Timer"]
wait_time = 3.0
one_shot = true

[node name="ReloadTickCooldown" type="Timer" parent="Timer"]
one_shot = true

[node name="DashDuration" type="Timer" parent="Timer"]
wait_time = 0.05
one_shot = true

[node name="DashCooldown" type="Timer" parent="Timer"]
wait_time = 5.0

[node name="Weapon" type="Node2D" parent="."]
z_index = 1
scale = Vector2(0.125, 0.125)

[node name="Unused" type="Node" parent="Weapon"]

[node name="MeleeWeaponOld" type="Sprite2D" parent="Weapon/Unused"]
visible = false
position = Vector2(10.25, 11.25)
scale = Vector2(0.125, 0.125)
texture = ExtResource("3_wn5fh")

[node name="RangedBulletSpawn" type="Marker2D" parent="Weapon"]
position = Vector2(152, 96)
scale = Vector2(8, 8)

[node name="MeleeSlashSpawn" type="Marker2D" parent="Weapon"]
position = Vector2(152, 96)
scale = Vector2(8, 8)

[node name="MeleeWeapon" type="Sprite2D" parent="Weapon"]
position = Vector2(82, 90)
scale = Vector2(1.2, 1.2)
texture = ExtResource("9_ymd6k")

[node name="RangedWeapon" type="Sprite2D" parent="Weapon"]
visible = false
position = Vector2(74, 90)
texture = ExtResource("4_6ht37")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_e8tdo")

[node name="BodySprite" type="Sprite2D" parent="."]
rotation = 1.5708
texture = ExtResource("1_m28o7")

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true
position_smoothing_speed = 10.0
rotation_smoothing_enabled = true

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_d5vcv")
}

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.295164, 0.636601, 0.497517, 1)

[connection signal="timeout" from="Timer/RangedCooldown" to="." method="_on_ranged_cooldown_timeout"]
[connection signal="timeout" from="Timer/DashDuration" to="." method="_on_dash_duration_timeout"]
[connection signal="timeout" from="Timer/DashCooldown" to="." method="_on_dash_cooldown_timeout"]
